<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/background_gray"
        tools:context=".ui.fragments.ProfileFragment">

    <TextView
            android:id="@+id/tv_fragmentProfile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fragmentProfile_title"
            android:textSize="25sp"
            app:fontFamily="@font/robotomedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tv_fragmentProfile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/fragmentProfile_name"
            android:textSize="18sp"
            app:fontFamily="@font/robotomedium"
            app:layout_constraintTop_toBottomOf="@id/tv_fragmentProfile_title"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_fragmentProfile_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/fragmentProfile_userName"
            android:textSize="18sp"
            app:fontFamily="@font/robotoregular"
            app:layout_constraintTop_toBottomOf="@id/tv_fragmentProfile_title"
            app:layout_constraintStart_toEndOf="@id/tv_fragmentProfile_name"/>

    <TextView
            android:id="@+id/tv_fragmentProfile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/fragmentProfile_email"
            android:textSize="18sp"
            app:fontFamily="@font/robotomedium"
            app:layout_constraintTop_toBottomOf="@id/tv_fragmentProfile_name"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_fragmentProfile_userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/fragmentProfile_userEmail"
            android:textSize="18sp"
            app:fontFamily="@font/robotoregular"
            app:layout_constraintTop_toBottomOf="@id/tv_fragmentProfile_name"
            app:layout_constraintStart_toEndOf="@id/tv_fragmentProfile_email"/>

    <TextView
            android:id="@+id/tv_fragmentProfile_createAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/fragmentProfile_createAt"
            android:textSize="18sp"
            app:fontFamily="@font/robotomedium"
            app:layout_constraintTop_toBottomOf="@id/tv_fragmentProfile_email"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_fragmentProfile_userCreateAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/fragmentProfile_userCreateAt"
            android:textSize="18sp"
            app:fontFamily="@font/robotoregular"
            app:layout_constraintTop_toBottomOf="@id/tv_fragmentProfile_email"
            app:layout_constraintStart_toEndOf="@id/tv_fragmentProfile_createAt"/>

    <TextView
            android:id="@+id/tv_fragmentProfile_historic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/fragmentProfile_historic"
            android:textSize="18sp"
            app:fontFamily="@font/robotomedium"
            app:layout_constraintTop_toBottomOf="@id/tv_fragmentProfile_createAt"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_fragmentProfile_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/fragmentProfile_logout"
            android:textSize="18sp"
            app:fontFamily="@font/robotomedium"
            app:layout_constraintTop_toBottomOf="@id/tv_fragmentProfile_historic"
            app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>