<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activities.SplashActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp">

            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:focusableInTouchMode="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/iv_signUp_logo"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_centerHorizontal="true"
                        android:background="@color/transparent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo"/>

                <TextView
                        android:id="@+id/tv_signUp_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_signUp_logo"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:text="@string/signUp_title"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        app:fontFamily="@font/robotomedium"/>

                <EditText
                        android:id="@+id/et_signUp_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_signUp_title"
                        android:layout_marginTop="25dp"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textSize="18sp"
                        app:fontFamily="@font/robotoregular"/>

                <EditText
                        android:id="@+id/et_signUp_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/et_signUp_name"
                        android:layout_marginTop="5dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="18sp"
                        app:fontFamily="@font/robotoregular"/>

                <EditText
                        android:id="@+id/et_signUp_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/et_signUp_email"
                        android:layout_marginTop="5dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="18sp"
                        app:fontFamily="@font/robotoregular"/>

                <EditText
                        android:id="@+id/et_signUp_confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/et_signUp_password"
                        android:layout_marginTop="5dp"
                        android:hint="@string/confirmPassword"
                        android:inputType="textPassword"
                        android:textSize="18sp"
                        app:fontFamily="@font/robotoregular"/>

                <TextView
                        android:id="@+id/tv_signUp_message_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/et_signUp_confirmPassword"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/error_data"
                        android:textColor="@color/dark_red"
                        android:textSize="18sp"
                        android:visibility="invisible"
                        app:fontFamily="@font/robotomedium"/>

                <Button
                        android:id="@+id/signUp_btn_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_below="@id/et_signUp_confirmPassword"
                        android:layout_marginTop="45dp"
                        android:background="@drawable/button_purple"
                        android:text="@string/btn_signUp"
                        android:textAllCaps="false"
                        android:textColor="@color/textGrayUltraLight"
                        android:textSize="20sp"
                        app:fontFamily="@font/robotoregular"/>

                <Button
                        android:id="@+id/signUp_btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_below="@id/signUp_btn_signUp"
                        android:layout_marginTop="29dp"
                        android:background="@drawable/button_red"
                        android:text="@string/btn_cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/textGrayUltraLight"
                        android:textSize="20sp"
                        app:fontFamily="@font/robotoregular"/>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>