<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activities.ForgotPasswordActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:focusableInTouchMode="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/iv_forgotPassword_logo"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:layout_centerHorizontal="true"
                        android:background="@color/transparent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo"/>

                <TextView
                        android:id="@+id/tv_forgotPassword_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_forgotPassword_logo"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:text="@string/reset_password"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        app:fontFamily="@font/robotomedium"/>

                <EditText
                        android:id="@+id/et_forgotPassword_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_forgotPassword_title"
                        android:layout_marginTop="40dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="18sp"
                        app:fontFamily="@font/robotoregular"/>

                <TextView
                        android:id="@+id/tv_forgotPassword_error_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/et_forgotPassword_email"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/error_email_empty"
                        android:textColor="@color/dark_red"
                        android:textSize="16sp"
                        android:visibility="invisible"
                        app:fontFamily="@font/robotomedium"/>

                <Button
                        android:id="@+id/forgotPassword_btn_reset"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_below="@id/et_forgotPassword_email"
                        android:layout_marginTop="60dp"
                        android:background="@drawable/button_purple"
                        android:text="@string/btn_send"
                        android:textAllCaps="false"
                        android:textColor="@color/textGrayUltraLight"
                        android:textSize="20sp"
                        app:fontFamily="@font/robotoregular"/>

                <Button
                        android:id="@+id/forgotPassword_btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_below="@id/forgotPassword_btn_reset"
                        android:layout_marginTop="29dp"
                        android:background="@drawable/button_red"
                        android:text="@string/btn_cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/textGrayUltraLight"
                        android:textSize="20sp"
                        app:fontFamily="@font/robotoregular"/>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>